# databricks-genie-bot

./: .gitignore  app.py  pyproject.toml  requirements.txt
