[project]
name = "databricks-genie-bot"
version = "0.1.0"
description = "Databricks Genie chatbot demo"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.11.18",
    "botbuilder>=0.0.1",
    "botbuilder-core>=4.16.2",
    "databricks-sdk>=0.50.0",
    "dotenv>=0.9.9",
]
